--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dexie": "^3.2.0",
     "dexie-react-hooks": "^1.1.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2"
   },
